--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-bootstrap-md": "^6.0.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "d3": "^5.1.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
@@ -36,6 +37,7 @@
     "@angular/cli": "~1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/d3": "^5.0.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
