--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "hammerjs": "^2.0.8",
     "lexical-parser": "^1.0.0",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "sonarqube-scanner": "^2.0.2"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
