--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,7 @@
-language:
-  node_js
+language: node_js
 node_js:
-  - "8"
-branches:
-  only:
-  - master
-  - develop
-notifications:
-  email:
-    recipients:
-    - alberto_nitro_eso@hotmail.com
-addons:
-  sonarcloud:
-    organization: SARA2018-frontend
-    token:
-      secure: 931b15efbbd2af0e0c5405be48afc54b42ed3fb4
+    - "9.2.1"
+script: npm run travis
+
 before_script:
-  - npm install
-script:
-  ##- npm run test
-  - sonar-scanner
+    - npm install
