--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ script:
     - npm test
 
 before_script:
-    - npm install
     - export CHROME_BIN=chromium-browser
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
+    - npm install
+
+
