--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ node_js:
     - "9.2.1"
 script: 
     - npm run travis
-    - ng test --single-run
+    - ng test
 
 before_script:
+    - npm install
+
+before_install:
     - export CHROME_BIN=chromium-browser
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-    - npm install
 
 
