--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,9 @@ sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.sources=.
 sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, test/**, coverage/**,*.sh, configuration.js
 
+sonar.javascript.jstest.reportsPath=coverage
+sonar.javascript.lcov.reportPath=coverage/lcov.info
+
 sonar.sourceEncoding=UTF-8
 
 
