--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.projectVersion=0.0.1-SNAPSHOT
 sonar.sources=.
 sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, test/**, coverage/**,*.sh, configuration.js
 
+sonar.tests=.
 sonar.javascript.jstest.reportsPath=coverage
 sonar.javascript.lcov.reportPath=coverage/lcov.info
 
