--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "d3": "^5.1.0",
     "hammerjs": "^2.0.8",
     "lexical-parser": "^1.0.0",
+    "ngx-logger": "^3.0.0-rc1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "sonarqube-scanner": "^2.0.2"
+    "sonarqube-scanner": "^2.0.2",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
