--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  },"engines":{
+  },
+  "engines": {
     "node": "9.2.1",
     "npm": "5.8.0"
   }
